# mf_view_syn

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  convert.sh  convert.sh~  copyright.py  copyright.txt  debugtest.sh  fg.gv  gr.gv  graph.gv  output (copy).avi  poznan.sh  push.sh  run.sh  timeline.json
config/: bbb_bunny.json  bbb_bunny_cam.txt  poznan_blocks.json  poznan_blocks_cam.txt  poznan_blocks_cam_.txt  poznan_blocks_camera_parameters.txt  poznan_blocks_camera_parameters_interpolated.txt  poznan_blocks_out_cam.txt
src/: common.h  configuration.cc  configuration.h  main.cc  rs_camera_array.cc  rs_camera_array.h  rs_config_reader.cc  rs_config_reader.h  view_synthesis.cc  view_synthesis.h
src/filter/: depth_post_process.cc  depth_post_process.h  depth_warp.cc  depth_warp.h  gui_sink.cc  gui_sink.h  image_post_process.cc  image_post_process.h  image_reverse_warp.cc  image_reverse_warp.h  image_warp.cc  image_warp.h  realtime_rewarp.cc  realtime_rewarp.h  result_blend.cc  result_blend.h  result_blend.txt  result_post_process.cc  result_post_process.h  scale.h  stereo_sink.h
unused/support/: common.h  input_data.cc  input_data.h
